css/layout_hucf_grid.css
html {
	box-sizing: border-box;
	font-size: 62.5%;
	margin: 0;
	padding: 0;
}

*, *::before, *::after {
	box-sizing: inherit;
} 
html {
	height: 100%;
}

html, body, header, main, div, footer {
	margin: 0;
	padding: 0;
}

body {
	background: hsla(180, 50%, 50%, 0.8);
	font-size: 2rem;
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
	display: grid;
	grid-template: 'header header header' 
					'main main main' 
					'footer footer footer';
}

header {
	grid-area: header;
	padding: 30px;
	text-align: center;
	border-bottom: 1.4px dashed rgba(0, 0, 0, 0.4);
	margin-bottom: 1rem;
	background-color: hsl(0, 0%, 69%);
}

main {
	grid-area: main;
	display: grid;
	grid-template: 'left middle middle right';
	grid-gap: 10px;	
}

.col {
	padding: 2rem;
	text-align: center;
	border: 1px solid rgba(0, 0, 0, 0.2);
}

div#col1 {
	background-color: hsl(0, 0%, 66%);
	grid-area: left;
}

div#col2 {
	background-color: hsl(0, 0%, 73%);
	grid-area: middle;
}

div#col3 {
	background-color: hsl(0, 0%, 80%);
	grid-area: right;
}

footer {
	background-color: #f1f1f1;
	padding: 30px;
	text-align: center;
	margin-top: 1rem;
	grid-area: footer;
}

@media screen and (max-width: 600px) {
	.row {
		grid-template: '.';
	}
}

